<resources>
    <string name="app_name_short" translatable="false">Neuronizer</string>
    <string name="app_name">Neuronizer Notes</string>
    <string name="no_preview_existing">Create a new ToDo list!</string>
    <string name="create_todo_list">Create ToDo List</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="appbar_font" translatable="false">Quicksand-Regular.ttf</string>
    <string name="missing_header_preview">There is nothing to display, yet!</string>
    <string name="mandatory_description" translatable="false"/>
    <string name="preview_deleted_snackbar">The ToDo list has been deleted</string>
    <string name="preview_restored_snackbar">The ToDo list has been restored</string>
    <string name="undo">Undo</string>
    <string name="title_empty_todo_list">Almost done!</string>
    <string name="empty_todo_list">Before you start to save your thoughts, decide how you can categorize them. For example \"Thriller\" or \"Sci-Fi\". This will help you to stay on top of things, later on.</string>
    <string name="title_empty_preview">It\'s empty here!</string>
    <string name="empty_preview">At first, let\'s create a new ToDo list or a note for example \"Favourite Series\" or \"Shopping List\". Afterwards you can update the things belonging to this topic.</string>
    <string name="next">Next</string>
    <string name="important_switch">Important</string>
    <string name="header">Category</string>
    <string name="details">Details</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="copy">Copy</string>
    <string name="added_clipboard">Copied  to clipboard</string>
    <string name="no_clipboard">No text to copy</string>
    <string name="title_mandatory">You have to set a title</string>
    <string name="add_todo_list">Add ToDo list</string>
    <string name="add_item">Add Item</string>
    <string name="add_category">Add Category</string>
    <string name="done">Done</string>
    <string name="fragment_edit_item">Edit Item</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="action_edit_category">Edit %s</string>
    <string name="edit_category">Edit Category</string>
    <string name="edit_topic">Edit Topic</string>
    <string name="deleted_snackbar">Deleted \"%s\"</string>
    <string name="deleted_item">Deleted item(s):</string>
    <string name="confirm_todo_deletion">Confirm topic deletion</string>
    <string name="confirm_header_or_item_deletion">Confirm category/item deletion</string>
    <string name="introduction">Introduction slides</string>
    <string name="export_database">Export database</string>
    <string name="import_database">Import database</string>
    <string name="deleting_items">Deleting items</string>
    <string name="database">Database</string>
    <string name="about_html_credits">Logo basis made by <a href="http://www.freepik.com" title="Freepik">Freepik</a>.</string>
    <string name="additional_info">Additional information</string>
    <string name="details_title">%s\'s Details</string>
    <string name="sort">Sorting</string>
    <string name="sort_dialog">Sort by</string>
    <string name="sort_most_used">Importance</string>
    <string name="sort_last_change">Last change</string>
    <string name="sort_creation">Creation date</string>
    <string name="sort_alphabetically">Alphabet</string>
    <string name="import_success">Database imported</string>
    <string name="import_failure">Couldn\'t import database</string>
    <string name="export_success">Database exported</string>
    <string name="export_failure">Couldn\'t export database</string>
    <string name="switch_database">Switch database</string>
    <string name="switched_database">Switched to \"%s\"</string>
    <string name="swipe_left">Swipe left to update</string>
    <string name="swipe_left_descr">Update an item by swiping left</string>
    <string name="swipe_right">Swipe right to delete</string>
    <string name="swipe_right_descr">Delete an item by swiping right</string>
    <string name="welcome">Welcome to Neuronizer</string>
    <string name="welcome_descr">Use Neuronizer to organize your thoughts, ideas and tasks fast and secure</string>
    <string name="add_todo_lists_descr">Use ToDo lists to handle the tasks in your daily life</string>
    <string name="sort_descr">You can sort your ToDo lists the way you like</string>
    <string name="add_category_descr">Group your ToDo lists in categories to recognize information even faster</string>
    <string name="add_item_descr">Add your thoughts, ideas and tasks to a category</string>
    <string name="drag_drop" translatable="false"><![CDATA[Drag & Drop]]></string>
    <string name="drag_drop_descr">Order everything the way you like to</string>
    <string name="edit_category_descr">Update existing categories by holding it</string>
    <string name="categorization">Categorization</string>
    <string name="add_items">Add thoughts</string>
    <string name="edit_categories">Update categories</string>
    <string name="add_todo_lists">Add ToDo lists</string>
    <string name="intro_preview">App introduction</string>
    <string name="intro_todo_list">ToDo list introduction</string>
    <string name="intro_dialog">Choose introduction slides</string>
    <string name="widget_config_description">Select ToDo list</string>
    <string name="select_list">Select</string>
    <string name="widget_empty">Loading 🙈</string>
    <string name="open">Open</string>
    <string name="add_widgets_descr">See your tasks right away using widgets</string>
    <string name="add_widgets">Add widgets</string>
    <string name="check_items">Check tasks</string>
    <string name="check_items_descr">Click on an item to mark it as done</string>
    <string name="todo_widget">ToDo list widget</string>
    <string name="imprint">Imprint</string>
    <string name="add_note">Add note</string>
    <string name="edit_note">Edit note</string>
    <string name="copy_clipboard">Copy to clipboard</string>
    <string name="preview_title" translatable="false">%s</string>
    <string name="add_notes">Add notes</string>
    <string name="add_notes_descr">Use notes to save your thoughts and ideas easily</string>
</resources>
