<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="de.djuelg.neuronizer.presentation.ui.fragments.ItemFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <include layout="@layout/richtext_navigation"
        android:id="@+id/richtext_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/richtext_navigation"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:divider="@drawable/separator"
            android:orientation="vertical"
            android:showDividers="middle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/item_height"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="@dimen/standard_normal"
                    android:text="@string/header"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/dark_gray" />

                <Spinner
                    android:id="@+id/header_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/item_height"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:minWidth="88dp"
                    android:padding="@dimen/standard_normal"
                    android:text="@string/title"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/dark_gray" />

                <EditText
                    android:id="@+id/editText_item_title"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:minHeight="@dimen/item_height"
                    android:paddingBottom="@dimen/standard_normal"
                    android:paddingEnd="@dimen/standard_normal"
                    android:paddingStart="@dimen/standard_small"
                    android:paddingTop="@dimen/standard_normal"
                    android:selectAllOnFocus="false"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColorHint="@color/dark_gray" />

                <ImageButton
                    android:id="@+id/button_copy_title"
                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:elevation="2dp"
                    android:src="@drawable/ic_content_copy_gray_24dp"
                    android:contentDescription="@string/mandatory_description" />

            </LinearLayout>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/important_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:minHeight="@dimen/item_height"
                android:padding="@dimen/standard_normal"
                android:text="@string/important_switch"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/dark_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/item_height"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:padding="@dimen/standard_normal"
                        android:text="@string/details"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/dark_gray" />

                    <ImageButton
                        android:id="@+id/button_copy_details"
                        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:elevation="2dp"
                        android:src="@drawable/ic_content_copy_gray_24dp"
                        android:contentDescription="@string/mandatory_description" />

                </LinearLayout>


                <jp.wasabeef.richeditor.RichEditor
                    android:id="@+id/richEditor_item_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/button_save_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_large"
            android:layout_gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:clickable="true"
            app:elevation="2dp"
            app:srcCompat="@drawable/ic_done_white_24dp"/>

    </RelativeLayout>

</RelativeLayout>
